--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <div class="md:flex md:h-16 text-sm md:flex-grow pb-4 md:pb-0 border-b md:border-b-0">
             <a href="/#about" class="block mt-4 md:inline-block md:mt-0 md:h-(16-4px) md:leading-(16-4px) box-border md:border-t-2 md:border-b-2  border-transparent  mr-4">About</a>
             <a href="/#research-projects" class="block mt-4 md:inline-block md:mt-0 md:h-(16-4px) md:leading-(16-4px) box-border md:border-t-2 md:border-b-2  border-transparent  mr-4">Research</a>
-            <a href="/pdf/Academic_CV.pdf" class="block mt-4 md:inline-block md:mt-0 md:h-(16-4px) md:leading-(16-4px) box-border md:border-t-2 md:border-b-2  border-transparent  mr-4">CV</a>
+            <a href="/#CV" class="block mt-4 md:inline-block md:mt-0 md:h-(16-4px) md:leading-(16-4px) box-border md:border-t-2 md:border-b-2  border-transparent  mr-4">CV</a>
         </div>
 
         <div class="flex">
@@ -742,7 +742,7 @@ Collaborators: Raine Vickers-Jones, Dr. David K. Sewell, Dr. Timothy J. Ballard<
 
     
       <div class="py-8 text-lg leading-normal">
-        View my CV <a href="/pdf/Academic_CV.pdf">here</a>
+        Short CV (two pages) &ndash; <a href="/pdf/Academic_CV.pdf">Full CV</a>
       </div>
     
   </div>
@@ -788,7 +788,11 @@ Collaborators: Raine Vickers-Jones, Dr. David K. Sewell, Dr. Timothy J. Ballard<
   </div>
 </div>
 <div class="content">
-  
+  <ul>
+<li><a href="/pdf/Short_CV_Website.pdf">Short CV (two pages)</a></li>
+<li><a href="/pdf/Academic_CV.pdf">Full CV</a></li>
+</ul>
+
 </div>
 
   
