--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
   
 
   <div class="pl-scrollbar bg-cover" 
-     style="background-image: url(https://manikyaalister.github.io/images/_DSC3121.JPG);" >
+     style="background-image: url(https://manikyaalister.github.io/images/hero-left.jpg);" >
     <div class="max-w-screen-xl mx-auto">
       <div id="blank2" class="lg:w-3/4 mx-auto px-6 md:px-8 xl:px-12 py-12">
         
