--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
 <li>OSF (full data, materials, and code coming soon)</li>
 </ul>
 <h2 id="perceptions-of-replicability-in-psychological-science">Perceptions of Replicability in Psychological Science</h2>
-<p>In this project my collaborators and I designed a survey which was completed by over 500 psychological scientists. We asked them how different attributes of a study (e.g., sample size, subdiscipline, <i>p</i> value, use of open science practices, etc.) influenced their confidence that a study would replicate. See the full published manuscript for more details.
+<p>In a recently completed project that I worked on during my undergrad, my collaborators and I designed a survey which was completed by over 500 psychological scientists. We asked them how different attributes of a study (e.g., sample size, subdiscipline, <i>p</i> value, use of open science practices, etc.) influenced their confidence that a study would replicate. See the full published manuscript for more details.
 Collaborators: Raine Vickers-Jones, Dr. David K. Sewell, Dr. Timothy J. Ballard</p>
 <h3 id="associated-manuscripts-publications-and-resources-2">Associated manuscripts, publications, and resources:</h3>
 <p>Alister, M., Vickers-Jones, Rain., Sewell, David K., and Ballard, Timothy J., (2021). How do we choose our giants? Perceptions of replicability in psychological science. <i>Advancements in Methods and Practices in Psychological Science</i>. <a href="https://journals.sagepub.com/doi/10.1177/25152459211018199">doi: 10.1177/25152459211018199</a></p>
@@ -653,7 +653,7 @@ Collaborators: Raine Vickers-Jones, Dr. David K. Sewell, Dr. Timothy J. Ballard<
   
 
   <div class="pl-scrollbar bg-cover" 
-     style="background-image: url(https://manikyaalister.github.io/images/hero-left.jpg);" >
+     style="background-image: url(https://manikyaalister.github.io/images/_DSC3058.JPG);" >
     <div class="max-w-screen-xl mx-auto">
       <div id="blank" class="lg:w-3/4 mx-auto px-6 md:px-8 xl:px-12 py-12">
         
