--- a/blank.html
+++ b/blank.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
+  <meta name="description" content="Manikya Alister is a PhD candidate in computational cognitive psychology at the University of Melbourne">
+  <meta name="keywords" content="Manikya Alister, cognition, psychologist, scientist, analyst, programmer">
+  <meta name="author" content="Manikya Alister">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta http-equiv="Content-Style-Type" content="text/css">
   <title></title>
