--- a/index.html
+++ b/index.html
@@ -390,7 +390,8 @@
 </div>
 <div class="content">
   <h2 id="about-me">About Me</h2>
-<p>I have research and teaching experience across several areas including psychology, neuroscience, and statistics (check out the &ldquo;CV&rdquo; tab to see more detail). My PhD research, supervised by Associate Professor Andrew Perfors, uses computational modelling and experimental methods to better understand how our assumptions about other people&mdash; and the generative processes underlying data they provide&mdash; affect how we learn and reason about the world. Some questions I am currently focusing on include; what kinds of assumptions do we make about the people that we learn from and why? How do these assumptions affect our cognitive processes and can we model them? Can Bayesian models of cognition be computationally tractable and describe how reasoning varies as a function of our limited cognitive capacity?</p>
+<p>I have research and teaching experience across several areas including psychology, neuroscience, and statistics (check out the &ldquo;CV&rdquo; tab to see more detail).</p>
+<p>My PhD research, supervised by Associate Professor Andrew Perfors, uses computational modelling and experimental methods to better understand how our assumptions about other people&mdash; and the generative processes underlying data they provide&mdash; affect how we learn and reason about the world. Some questions I am currently focusing on include; what kinds of assumptions do we make about the people that we learn from and why? How do these assumptions affect our psychological processes? How can we model changes in psychological processes over time?</p>
 <p>Research outside of my PhD has broadly focused on social cognition, decision-making, I/O psychology, and meta-science. In 2020 I graduated with a Bachelor of Psychological Science (Honours) from the University of Queensland (UQ). In my Honours year I won the McElwain prize for the best Honours thesis in Psychology and also graduated top of my cohort, winning the Australian Psychological Society Prize for UQ and a University Medal. For my Honours thesis I applied computational models to data from a novel experimental paradigm to better understand how time pressure affects how we prioritise different tasks&ndash; you can read it <a href="/pdf/44354752_Alister_7968.pdf">here</a>.</p>
 <p>If you would be interested in collaborating or have any questions about my research please feel free to get in contact.</p>
 <h2 id="skills">Skills</h2>
@@ -411,11 +412,14 @@
 <li><b>Alister, M.</b>, Vickers-Jones, R., Sewell, D.K., and Ballard, T.J., (2021). How do we choose our giants? Perceptions of replicability in psychological science. <i>Advancements in Methods and Practices in Psychological Science</i>. <a href="https://journals.sagepub.com/doi/10.1177/25152459211018199">10.1177/25152459211018199</a></li>
 </ul>
 <h2 id="hire-me">Hire me</h2>
-<p>I&rsquo;m available for hire as a freelance data analyst, private tutor, and research consultant.</p>
-<h3 id="testimonials">Testimonials</h3>
-<p><i>&ldquo;Manikya&rsquo;s advice was relatable and clearly communicated&rdquo;</i></p>
-<p><i>&ldquo;Manikya always thoroughly explains things, and makes sure to translate into layman&rsquo;s terms and give examples as he goes, so the content he covers is very easy to follow&rdquo;</i></p>
-<p><i>&ldquo;Manikya delivered the course content very well - he is knowledgeable, engaging and encourages student participation in a welcoming manner. I really enjoyed having him as a tutor&rdquo;</i></p>
+<p>I&rsquo;m available for hire as a freelance data analyst and private tutor. Contact me to learn more!</p>
+ <!--.### Testimonials
+
+ <i>"Manikya's advice was relatable and clearly communicated"</i>
+  
+<i>"Manikya always thoroughly explains things, and makes sure to translate into layman's terms and give examples as he goes, so the content he covers is very easy to follow"</i>   
+  
+<i>"Manikya delivered the course content very well - he is knowledgeable, engaging and encourages student participation in a welcoming manner. I really enjoyed having him as a tutor"</i>  -->
 
 </div>
 
