add Data Science section and update CV

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 
     
       <div class="py-8 text-lg leading-normal">
-        I&rsquo;m a PhD candidate and academic tutor at The University of Melbourne&rsquo;s Complex Human Data Hub within the Melbourne School of Psychological Sciences.
+        I&rsquo;m a PhD candidate and academic tutor at The University of Melbourne&rsquo;s Complex Human Data Hub within the Melbourne School of Psychological Sciences. I also work part time as a research associate for the University of Adelaide and do casual freelance data science work.
       </div>
     
   </div>
@@ -388,15 +388,18 @@
 </div>
 <div class="content">
   <h2 id="about-me">About Me</h2>
+<h4 id="academic-research">Academic Research</h4>
 <p>I have research and teaching experience across several areas including psychology, neuroscience, and statistics (check out the &ldquo;CV&rdquo; tab to see more detail).</p>
 <p>My PhD research, supervised by Associate Professor Andrew Perfors, uses computational modelling and experimental methods to better understand how our assumptions about other people&mdash; and the generative processes underlying data they provide&mdash; affect how we learn and reason about the world. Some questions I am currently focusing on include; what kinds of assumptions do we make about the people that we learn from and why? How do these assumptions affect our psychological processes? How can we model changes in psychological processes over time?</p>
 <p>Research outside of my PhD has broadly focused on social cognition, decision-making, I/O psychology, and meta-science. In 2020 I graduated with a Bachelor of Psychological Science (Honours) from the University of Queensland (UQ). In my Honours year I won the McElwain prize for the best Honours thesis in Psychology and also graduated top of my cohort, winning the Australian Psychological Society Prize for UQ and a University Medal. For my Honours thesis I applied computational models to data from a novel experimental paradigm to better understand how time pressure affects how we prioritise different tasks&ndash; you can read it <a href="/pdf/44354752_Alister_7968.pdf">here</a>.</p>
-<p>If you would be interested in collaborating or have any questions about my research please feel free to get in contact.</p>
+<h4 id="data-science">Data Science</h4>
+<p>I am passionate about building powerful, interactive data capabilities. I have worked with the <a href="https://www.gooddatainstitute.com/">Good Data Institute</a> to consolidate their internal database of volunteers and automate their intake processes. I also designed and deployed a web-based dashboard using R shiny that informs and visualizes several aspects of their organisation including diversity and equity and project impact. I am also working with the University of Adelaide and the Defense Science and Technologies Group to build a software prototype that leverages state of the art NLP techniques like BERTopics and other transformer based tools, and powerful data visualization libraries such as JavaScript&rsquo;s D3, to analyse how narratives emerge and spread across social media.</p>
+<p>If you would be interested in collaborating or have any questions about my research or other work please feel free to get in contact.</p>
 <h2 id="skills">Skills</h2>
 <ul>
 <li>Research design</li>
-<li>R</li>
 <li>Data analysis</li>
+<li>Programming</li>
 <li>Data visualisation</li>
 <li>Bayesian inference</li>
 <li>Statistical &amp; computational modelling</li>
@@ -404,13 +407,15 @@
 </ul>
 <h2 id="publications">Publications</h2>
 <ul>
-<li><b>Alister, M.</b>, Perfors, A., &amp; Ransom, K. J. (2022). Source independence affects argument persuasiveness when the relevance is clear. <i> Proc. of the 44th Annual Conference of the Cognitive Science Society </i>. <a href="https://doi.org/10.31234/osf.io/5yx36">10.31234/osf.io/5yx36</a></li>
-<li><b>Alister, M.</b>, McKay, K.T., Sewell, D.K., &amp; Evans, N.J., (2022). Uncovering the Cognitive Processes Underlying the Gaze Cueing Effect. <i>PsyArXiv</i>. <a href="https://psyarxiv.com/yu7e5">10.31234/osf.io/yu7e5</a></li>
-<li>McKay, K.T. Talipski, L.A.,  Grainger, S.A, <b>Alister, M.</b>, Henry, J.D. (2022). How Does Ageing Affect Social Attention? A Test of Competing Theories using Multi-Level Meta-Analysis. <i>The Journals of Gerontology: Series B</i>. <a href="https://doi-org.ezproxy.library.uq.edu.au/10.1093/geronb/gbac052">10.1093/geronb/gbac052</a></li>
-<li><b>Alister, M.</b>, Vickers-Jones, R., Sewell, D.K., and Ballard, T.J., (2021). How do we choose our giants? Perceptions of replicability in psychological science. <i>Advancements in Methods and Practices in Psychological Science</i>. <a href="https://journals.sagepub.com/doi/10.1177/25152459211018199">10.1177/25152459211018199</a></li>
+<li><b> Alister, M., </b> Herbert, S., Sewell, DK., Neal, A. Ballard, TJ., (Under Review). The Impact of Cognitive Resource Constraints on Goal Prioritization. <a href="https://psyarxiv.com/pkv7u/">Preprint.</a></li>
+<li><b>Alister, M.</b>, Ransom, K. J., &amp; Perfors, A. (2023). Inferring the truth from deception: What can people learn from helpful and unhelpful information providers? <i> Proc. of the 45th Annual Conference of the Cognitive Science Society </i>. <a href="https://psyarxiv.com/2yuwk">Link.</a></li>
+<li><b>Alister, M.</b>, McKay, K.T., Sewell, D.K., &amp; Evans, N.J., (2023). Uncovering the Cognitive Processes Underlying the Gaze Cueing Effect. <i>Quarterly Journal of Experimental Psychology</i>. <a href="https://journals.sagepub.com/doi/abs/10.1177/17470218231181238">Link.</a></li>
+<li><b>Alister, M.</b>, Perfors, A., &amp; Ransom, K. J. (2022). Source independence affects argument persuasiveness when the relevance is clear. <i> Proc. of the 44th Annual Conference of the Cognitive Science Society </i>. <a href="https://doi.org/10.31234/osf.io/5yx36">Link.</a></li>
+<li>McKay, K.T. Talipski, L.A.,  Grainger, S.A, <b>Alister, M.</b>, Henry, J.D. (2022). How Does Ageing Affect Social Attention? A Test of Competing Theories using Multi-Level Meta-Analysis. <i>The Journals of Gerontology: Series B</i>. <a href="https://doi-org.ezproxy.library.uq.edu.au/10.1093/geronb/gbac052">Link.</a></li>
+<li><b>Alister, M.</b>, Vickers-Jones, R., Sewell, D.K., and Ballard, T.J., (2021). How do we choose our giants? Perceptions of replicability in psychological science. <i>Advancements in Methods and Practices in Psychological Science</i>. <a href="https://journals.sagepub.com/doi/10.1177/25152459211018199">Link.</a></li>
 </ul>
 <h2 id="hire-me">Hire me</h2>
-<p>I&rsquo;m available for hire as a freelance data analyst and private tutor. Contact me to learn more!</p>
+<p>I&rsquo;m available for hire as a freelance data scientist and private tutor. Contact me to learn more!</p>
  <!--.### Testimonials
 
  <i>"Manikya's advice was relatable and clearly communicated"</i>
