--- a/index.html
+++ b/index.html
@@ -388,13 +388,13 @@
 </div>
 <div class="content">
   <h2 id="about-me">About Me</h2>
+<p><b> I&rsquo;m currently on the lookout for postdoc positions that would start between March and September 2025. </b> If your lab is hiring or you know of a position or fellowship that I would be a good fit for, please get in touch.</p>
 <h4 id="academic-research">Academic Research</h4>
 <p>I have research and teaching experience across several areas including psychology, neuroscience, and statistics (check out the &ldquo;CV&rdquo; tab to see more detail).</p>
-<p>My PhD research, supervised by Professor Andrew Perfors, uses computational modelling and experimental methods to how social inference underpins our ability to perform everyday learning, reasoning, and decision-making. Some questions I am currently focusing on include; what kinds of assumptions do we make about the people that we learn from and why? Under what circumstances are we more or less persuaded by social testimony? How can we model changes in psychological processes over time?</p>
+<p>My PhD research, supervised by Professor Andrew Perfors, uses computational modelling and experimental methods to understand how social inference underpins our ability to perform efficient cognition. Some questions I am currently focusing on include; what kinds of assumptions do we make about the people that we learn from and why? Under what circumstances are we more or less persuaded by social testimony? What happens to our cognitive mechanisms over time as we learn to trust/distrust someone?</p>
 <p>Research outside of my PhD has broadly focused on social cognition, decision-making, I/O psychology, and meta-science. In 2020 I graduated with a Bachelor of Psychological Science (Honours) from the University of Queensland (UQ). In my Honours year I won the McElwain prize for the best Honours thesis in Psychology and also graduated top of my cohort, winning the Australian Psychological Society Prize for UQ and a University Medal.</p>
 <h4 id="data-science">Data Science</h4>
-<p>I have experience building powerful, interactive data capabilities. I have worked with the <a href="https://www.gooddatainstitute.com/">Good Data Institute</a> to consolidate their internal database of volunteers and automate their intake processes. I also designed and deployed a web-based dashboard using R shiny that informs and visualizes several aspects of their organisation including the diversity and equity of their volunteers and project impact. I also worked with the University of Adelaide and the Defense Science and Technologies Group to build a software prototype that leverages state of the art NLP techniques like BERTopics and other transformer based tools, and powerful data visualization libraries such as JavaScript&rsquo;s D3, to analyse how narratives emerge and spread across social media.</p>
-<p>If you would be interested in collaborating or have any questions about my research or other work please feel free to get in contact.</p>
+<p>I have experience building powerful, interactive data capabilities. I have worked with the <a href="https://www.gooddatainstitute.com/">Good Data Institute</a> to consolidate their internal database of volunteers and automate their intake processes. I also designed and deployed a web-based dashboard using R shiny that informs and visualizes several aspects of their organisation including the diversity and equity of their volunteers and project impact (see <a href="https://www.gooddatainstitute.com/post/how-does-an-organisation-of-data-professionals-leverage-its-own-data">this blog post</a> I wrote about the project). I also worked with the University of Adelaide and the Defense Science and Technologies Group to build a software prototype that leverages state of the art NLP techniques like BERTopics and other transformer based tools, and powerful data visualization libraries such as JavaScript&rsquo;s D3, to analyse how narratives emerge and spread across social media.</p>
 <h2 id="skills">Skills</h2>
 <ul>
 <li>Research design</li>
@@ -416,13 +416,19 @@
 <li><b>Alister, M.</b>, Vickers-Jones, R., Sewell, D.K., and Ballard, T.J., (2021). How do we choose our giants? Perceptions of replicability in psychological science. <i>Advancements in Methods and Practices in Psychological Science</i>. <a href="https://journals.sagepub.com/doi/10.1177/25152459211018199">Link.</a></li>
 </ul>
 <h2 id="under-review">Under Review</h2>
-<p>-<b> Alister, M. </b> , Ransom, K.J., Connor-Desai, S., Soh, E.V. Hayes, B., Perfors, A. How convincing is a crowd? Quantify-
+<ul>
+<li>
+<p><b>Alister, M. </b> , Ransom, K.J., Connor-Desai, S., Soh, E.V. Hayes, B., Perfors, A. How convincing is a crowd? Quantify-
 ing the persuasiveness of a consensus across individuals and claim types.</p>
-<p>-<b> Alister, M. </b>, Evans, Nathan J. ParAcT-DDM: A diffusion-based framework for modelling systematic, time-varying
-cognitive processes</p>
+</li>
+<li>
+<p><b>Alister, M. </b>, Evans, Nathan J. ParAcT-DDM: A diffusion-based framework for modelling systematic, time-varying
+cognitive processes.</p>
+</li>
+</ul>
 <h2 id="hire-me">Hire me</h2>
-<p>I&rsquo;m available for hire as a freelance data scientist and private tutor. Contact me to learn more!</p>
- <!--.### Testimonials
+<p>I&rsquo;m on the look out for postdoc positions beginning next year.</p>
+<!--.### Testimonials
 
  <i>"Manikya's advice was relatable and clearly communicated"</i>
   
