update postdoc timeline and cv

--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
 <div class="content">
   <h1 id="about-me">About Me</h1>
 <p>I build experiments and develop computational models to explain and predict how people learn and make decisions. <b></p>
-<p>I&rsquo;m on the lookout for postdoc positions starting between March and September 2025. </b> If your lab is hiring or you know of a position or fellowship that I would be a good fit for, please get in touch.</p>
+<p>I&rsquo;m due to finish my PhD mid-late 2025 and am looking for a postdoc. </b> If your lab is hiring or you know of a position or fellowship that I would be a good fit for, please get in touch.</p>
 <h2 id="academic-research">Academic Research</h2>
 <p>I have research and teaching experience across several areas including psychology, neuroscience, and statistics (check out the &ldquo;CV&rdquo; tab to see more detail).</p>
 <p>I have broad interests, but my main focus at the moment is understanding how social inference underpins our ability to perform efficient cognition. Some questions I am currently focusing on include:</p>
@@ -413,7 +413,8 @@
 </ul>
 <h1 id="publications">Publications</h1>
 <ul>
-<li><b> Alister, M., </b> Herbert, S., Sewell, DK., Neal, A. Ballard, TJ., (2023). The Impact of Cognitive Resource Constraints on Goal Prioritization. <i> Cognitive Psychology. </i> <a href="https://www.sciencedirect.com/science/article/pii/S0010028523000762">Link.</a></li>
+<li><b>Alister, M. </b> , Ransom, K.J., Connor-Desai, S., Soh, E.V. Hayes, B., Perfors, A. (2025) How convincing is a crowd? Quantifying the persuasiveness of a consensus across individuals and claim types. Provisionally accepted at <em>Psychological Science</em>.</li>
+<li><b> Alister, M., </b> Herbert, S., Sewell, DK., Neal, A. Ballard, TJ., (2024). The Impact of Cognitive Resource Constraints on Goal Prioritization. <i> Cognitive Psychology. </i> <a href="https://www.sciencedirect.com/science/article/pii/S0010028523000762">Link.</a></li>
 <li><b>Alister, M.</b>, Ransom, K. J., &amp; Perfors, A. (2023). Inferring the truth from deception: What can people learn from helpful and unhelpful information providers? <i> Proc. of the 45th Annual Conference of the Cognitive Science Society </i>. <a href="https://psyarxiv.com/2yuwk">Link.</a></li>
 <li><b>Alister, M.</b>, McKay, K.T., Sewell, D.K., &amp; Evans, N.J., (2023). Uncovering the Cognitive Processes Underlying the Gaze Cueing Effect. <i>Quarterly Journal of Experimental Psychology</i>. <a href="https://journals.sagepub.com/doi/abs/10.1177/17470218231181238">Link.</a></li>
 <li>McKay K.T., Grainger S.A, <b> Alister, M.,</b>, Henry, J.D., (2023) Enhancing Ecological Validity of Gaze-Cueing Stimuli is Associated with Increased Gaze Following for Older but not Younger Adults. <i> Psychology and Ageing </i>. <a href="https://www.researchgate.net/profile/Kate-Mckay-2/publication/368653372_Enhancing_Ecological_Validity_of_Gaze-Cueing_Stimuli_is_Associated_with_Increased_Gaze_Following_for_Older_but_not_Younger_Adults/links/64509b10809a535021410828/Enhancing-Ecological-Validity-of-Gaze-Cueing-Stimuli-is-Associated-with-Increased-Gaze-Following-for-Older-but-not-Younger-Adults.pdf">Link.</a></li>
@@ -423,22 +424,17 @@
 </ul>
 <h2 id="under-review">Under Review</h2>
 <ul>
-<li>
-<p><b>Alister, M. </b> , Ransom, K.J., Connor-Desai, S., Soh, E.V. Hayes, B., Perfors, A. How convincing is a crowd? Quantify-
-ing the persuasiveness of a consensus across individuals and claim types.</p>
-</li>
-<li>
-<p><b>Alister, M. </b>, Evans, Nathan J. ParAcT-DDM: A diffusion-based framework for modelling systematic, time-varying
-cognitive processes.</p>
-</li>
+<li><b>Alister, M. </b> &amp; Evans, Nathan J. ParAcT-DDM: A diffusion-based framework for modelling systematic, time-varying
+cognitive processes. In revision at <em>Psychological Review</em>. <a href="https://osf.io/preprints/psyarxiv/4wzng">Preprint</a></li>
+<li><strong>Alister, M.</strong> &amp; Perfors, A. Stochastic search algorithms can tell us who to trust (and why).</li>
+<li><strong>Alister, M.</strong>, Ransom, KJ., Lua, A., Perfors, A. The impact of engagement and partisan influence campaigns in an
+isolated social media environment.</li>
 </ul>
 <h2 id="non-academic-publications-and-articles-featuring-my-research">Non-academic publications and articles featuring my research</h2>
 <ul>
 <li>Wilcox, C. <em>Science Advisor</em>. Getting your priorities straight, with a little help from science. <a href="https://www.science.org/content/article/scienceadviser-chattier-parents-have-more-talkative-kids#:~:text=Getting%20your%20priorities%20straight%2C%20with%20a%20little%20help%20from%20science">Link.</a></li>
 <li><b> Alister , M. </b> <em>Good Data Institute</em>. How does an organisation of data professionals leverage its own data? <a href="https://www.gooddatainstitute.com/post/how-does-an-organisation-of-data-professionals-leverage-its-own-data">Link.</a></li>
 </ul>
-<h1 id="hire-me">Hire me</h1>
-<p>I&rsquo;m due to finish my PhD between March and September 2025, and am on the lookout for postdoc positions.</p>
 <!--.### Testimonials
 
  <i>"Manikya's advice was relatable and clearly communicated"</i>
