--- a/index.html
+++ b/index.html
@@ -392,11 +392,12 @@
 <p>I&rsquo;m due to finish my PhD mid-late 2025 and am looking for a postdoc. </b> If your lab is hiring or you know of a position or fellowship that I would be a good fit for, please get in touch.</p>
 <h2 id="academic-research">Academic Research</h2>
 <p>I have research and teaching experience across several areas including psychology, neuroscience, and statistics (check out the &ldquo;CV&rdquo; tab to see more detail).</p>
-<p>I have broad interests, but my main focus at the moment is understanding how social inference underpins our ability to perform efficient cognition. Some questions I am currently focusing on include:</p>
+<p>I have broad interests, but most of my current research is focused on understanding how we learn and reason from social information, particularly in online contexts like on social media. Some questions I am currently focusing on include:</p>
 <ul>
 <li>What kinds of assumptions do we make about the people that we learn from and why?</li>
 <li>Under what circumstances are we more or less persuaded by social testimony?</li>
 <li>What happens to our cognitive mechanisms over time as we learn to trust/distrust someone?</li>
+<li>How do people integrate information from multiple sources to decide what to believe?</li>
 </ul>
 <p>I have also published in other areas such as perceptual decision-making, social cognition, goal prioritisation, and meta-science. In 2020 I graduated with a Bachelor of Psychological Science (Honours) from the University of Queensland (UQ). In my Honours year I won the McElwain prize for the best Honours thesis in Psychology and also graduated top of my cohort, winning the Australian Psychological Society Prize for UQ and a University Medal.</p>
 <h2 id="data-science">Data Science</h2>
