--- a/index.html
+++ b/index.html
@@ -389,8 +389,11 @@
 </div>
 <div class="content">
   <h1 id="about-me">About Me</h1>
-<p>I build experiments and develop computational models to explain and predict how people learn and make decisions. <b></p>
-<p>I&rsquo;m due to finish my PhD mid-late 2025 and am looking for a postdoc. </b> If your lab is hiring or you know of a position or fellowship that I would be a good fit for, please get in touch.</p>
+<p>I build experiments and develop computational models to explain and predict how people learn and make decisions.</p>
+<p>In early 2026 I&rsquo;ll be starting a postdoc with the
+<a href="https://ccs-ucb.github.io/">Computational Cognitive Science Laboratory</a>
+at UC Berkeley working with
+<a href="https://billdthompson.github.io/">Bill Thompson</a>.</p>
 <h2 id="academic-research">Academic Research</h2>
 <p>I have research and teaching experience across several areas including psychology, neuroscience, and statistics (check out the &ldquo;CV&rdquo; tab to see more detail).</p>
 <p>I have broad interests, but most of my current research is focused on understanding how we learn and reason from social information, particularly in online contexts like on social media. Some questions I am currently focusing on include:</p>
@@ -400,9 +403,9 @@
 <li>What happens to our cognitive mechanisms over time as we learn to trust/distrust someone?</li>
 <li>How do people integrate information from multiple sources to decide what to believe?</li>
 </ul>
-<p>I have also published in other areas such as perceptual decision-making, social cognition, goal prioritisation, and meta-science. In 2020 I graduated with a Bachelor of Psychological Science (Honours) from the University of Queensland (UQ). In my Honours year I won the McElwain prize for the best Honours thesis in Psychology and also graduated top of my cohort, winning the Australian Psychological Society Prize for UQ and a University Medal.</p>
+<p>I have also published in other areas such as perceptual decision-making, cognitive ageing, goal prioritisation, and meta-science. In 2020 I graduated with a Bachelor of Psychological Science (Honours) from the University of Queensland (UQ). In my Honours year I won the McElwain prize for the best Honours thesis in Psychology and also graduated top of my cohort, winning the Australian Psychological Society Prize for UQ and a University Medal.</p>
 <h2 id="data-science">Data Science</h2>
-<p>I have experience building powerful, interactive data capabilities. I have worked with the <a href="https://www.gooddatainstitute.com/">Good Data Institute</a> to consolidate their internal database of volunteers and automate their intake processes. I also designed and deployed a web-based dashboard using R shiny that informs and visualizes several aspects of their organisation including the diversity and equity of their volunteers and project impact (see <a href="https://www.gooddatainstitute.com/post/how-does-an-organisation-of-data-professionals-leverage-its-own-data">this blog post</a> I wrote about the project). I also worked with the University of Adelaide and the Defense Science and Technologies Group to build a software prototype that leverages state of the art NLP techniques like BERTopics and other transformer based tools, and powerful data visualization libraries such as JavaScript&rsquo;s D3, to analyse how narratives emerge and spread across social media.</p>
+<p>I have experience building powerful, interactive data capabilities. I have worked with the <a href="https://www.gooddatainstitute.com/">Good Data Institute</a> to consolidate their internal database of volunteers and automate their intake processes. Additionally, I designed and deployed a web-based dashboard using R shiny that informs and visualizes several aspects of their organisation including the diversity and equity of their volunteers and project impact (see <a href="https://www.gooddatainstitute.com/post/how-does-an-organisation-of-data-professionals-leverage-its-own-data">this blog post</a> I wrote about the project). I also worked with the University of Adelaide and the Defense Science and Technologies Group to build a software prototype that leverages state of the art NLP techniques like BERTopics and other transformer based tools, and powerful data visualization libraries such as JavaScript&rsquo;s D3, to analyse how narratives emerge and spread across social media.</p>
 <h1 id="skills">Skills</h1>
 <ul>
 <li>Research design</li>
@@ -515,22 +518,22 @@
 }
 </style>
 <div class="hanging-indent">
-<b>Alister, M.</b>, Ransom, K.J., Connor-Desai, S., Soh, E.V., Hayes, B., Perfors, A. (2025). How convincing is a crowd? Quantifying the persuasiveness of a consensus across individuals and claim types. Provisionally accepted at <i>Psychological Science</i>.
+<b>Alister, M.</b>, Ransom, K.J., Connor-Desai, S., Soh, E.V., Hayes, B., Perfors, A. (2025). How convincing is a crowd? Quantifying the persuasiveness of a consensus across individuals and claim types. <i>Psychological Science</i>. <a href = "https://journals.sagepub.com/doi/10.1177/09567976251344549">Link</a>
 </div>
 <div class="hanging-indent">
-<b>Alister, M.</b>, Perfors, A. (accepted). Stochastic search algorithms can tell us who to trust (and why). <i>Proceedings of the Annual Meeting of the Cognitive Science Society</i>, 46(46).
+<b>Alister, M.</b>, Perfors, A. (2025). Stochastic search algorithms can tell us who to trust (and why). <i>Proceedings of the Annual Meeting of the Cognitive Science Society</i>, 47.<a href = "https://escholarship.org/uc/item/7m47r9w2#main"> Link</a>
 </div>
 <div class="hanging-indent">
-<b>Alister, M.</b>, Ransom, K.J., Lua, A., Perfors, A. (accepted). The impact of engagement and partisan influence campaigns in an isolated social media environment. <i>Proceedings of the Annual Meeting of the Cognitive Science Society</i>, 46(46).
+<b>Alister, M.</b>, Ransom, K.J., Lua, A., Perfors, A. (2025). The impact of engagement and partisan influence campaigns in an isolated social media environment. <i>Proceedings of the Annual Meeting of the Cognitive Science Society</i>, 47. <a href = "https://escholarship.org/uc/item/8c99k40r"> Link</a>
 </div>
 <div class="hanging-indent">
-<b>Alister, M.</b>, Ransom, K.J., Connor-Desai, S., Soh, E.V., Hayes, B., Perfors, A. (2024). Sensitivity to Online Consensus Effects Within Individuals and Claim Types. <i>Proceedings of the Annual Meeting of the Cognitive Science Society</i>, 46(46). <a href="https://escholarship.org/uc/item/2rm2155p">Link</a>.
+<b>Alister, M.</b>, Ransom, K.J., Connor-Desai, S., Soh, E.V., Hayes, B., Perfors, A. (2024). Sensitivity to Online Consensus Effects Within Individuals and Claim Types. <i>Proceedings of the Annual Meeting of the Cognitive Science Society</i>, 46. <a href="https://escholarship.org/uc/item/7m47r9w2#main">Link</a>.
 </div>
 <div class="hanging-indent">
 <b>Alister, M.</b>, Herbert, S., Sewell, D.K., Neal, A., Ballard, T.J. (2024). The Impact of Cognitive Resource Constraints on Goal Prioritization. <i>Cognitive Psychology</i>, 148. <a href="https://doi.org/10.1016/j.cogpsych.2023.101618">Link</a>.
 </div>
 <div class="hanging-indent">
-<b>Alister, M.</b>, Ransom, K.J., Perfors, A. (2023). Inferring the truth from deception: What can people learn from helpful and unhelpful information providers? <i>Proceedings of the Annual Meeting of the Cognitive Science Society</i>, 45(45). <a href="https://escholarship.org/uc/item/8vt661bv">Link</a>.
+<b>Alister, M.</b>, Ransom, K.J., Perfors, A. (2023). Inferring the truth from deception: What can people learn from helpful and unhelpful information providers? <i>Proceedings of the Annual Meeting of the Cognitive Science Society</i>, 45. <a href="https://escholarship.org/uc/item/8vt661bv">Link</a>.
 </div>
 <div class="hanging-indent">
 <b>Alister, M.</b>, McKay, K.T., Sewell, D.K., Evans, N.J. (2023). Uncovering the Cognitive Mechanisms Underlying the Gaze Cueing Effect. <i>Quarterly Journal of Experimental Psychology</i>, 803–827. <a href="https://journals.sagepub.com/doi/abs/10.1177/17470218231181238">Link</a>.
@@ -546,18 +549,22 @@ Grainger, S.A., Henry, J.D., <b>Alister, M.</b>, Bourdaniotis, X.E., Mead, J., B
 </div>
 <h2 id="under-review">Under Review</h2>
 <div class="hanging-indent">
-    <b>Alister, M.</b>, Ransom, K. J., Perfors, A. (2023). When a helpful bias is unhelpful: Limitations in reasoning about random and deliberately misleading evidence. <a href="https://osf.io/preprints/psyarxiv/vyw3t_v1" target="_blank">Preprint.</a>
+    <b>Alister, M.</b>, Ransom, K. J., Perfors, A. When a helpful bias is unhelpful: Limitations in reasoning about random and deliberately misleading evidence.  In revision at the <i>Journal of Experimental Psychology: General </i>. <a href="https://osf.io/preprints/psyarxiv/vyw3t_v1" target="_blank">Preprint.</a>
 </div>
 <div class="hanging-indent">
     <b>Alister, M.</b>, Evans, N. J. ParAcT-DDM: A diffusion-based framework for modelling systematic, time-varying cognitive processes. In revision at <i>Psychological Review</i>. <a href="https://osf.io/preprints/psyarxiv/4wzng" target="_blank">Preprint.</a>
 </div>
 <h2 id="non-academic-publications-and-articles-featuring-my-research">Non-academic publications and articles featuring my research</h2>
 <div class="hanging-indent">
-    <b>Alister, M.</b> (2022). How does an organisation of data professionals leverage its own data? <i>Good Data Institute.</i> <a href="https://www.gooddatainstitute.com/post/how-does-an-organisation-of-data-professionals-leverage-its-own-data" target="_blank">Link.</a>
+ Alister, M. (to appear). When Consensus Changes Minds. <i> Character & Context </i> 
 </div>
 <div class="hanging-indent">
     Wilcox, C. (2023). The life academic: Getting your priorities straight, with a little help from science. <i>Science Advisor.</i> <a href="https://www.science.org/content/article/scienceadviser-chattier-parents-have-more-talkative-kids" target="_blank">Link.</a>
 </div>
+<div class="hanging-indent">
+    <b>Alister, M.</b> (2023). How does an organisation of data professionals leverage its own data? <i>Good Data Institute.</i> <a href="https://www.gooddatainstitute.com/post/how-does-an-organisation-of-data-professionals-leverage-its-own-data" target="_blank">Link.</a>
+</div>
+
 </div>
 
   
