--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="profile-content">
                 <h1>About Me</h1>
                 <p>I build experiments and develop computational models to explain and predict how people learn and make decisions.</p>
-                
+                <p>I am currently a research fellow and PhD candidate with the <a href="https://psychologicalsciences.unimelb.edu.au/chdh" target="_blank"> Complex Human Data Hub</a> at the University of Melbourne</p>
                 <p>In early 2026 I'll be starting a postdoc with the 
                 <a href="https://ccs-ucb.github.io/" target="_blank">Computational Cognitive Science Laboratory</a> 
                 at UC Berkeley working with 
